fir128/solution1/.autopilot/db/fir.pp.0.cpp.clang-tidy.loop-label.out.log
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:1318:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:1318:7: note: FIX-IT applied suggested code changes
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:2292:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:2292:5: note: FIX-IT applied suggested code changes
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:2306:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:2306:5: note: FIX-IT applied suggested code changes
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:2320:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:2320:5: note: FIX-IT applied suggested code changes
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:3949:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:3949:7: note: FIX-IT applied suggested code changes
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:9048:2: warning: Added loop label VITIS_LOOP_13_1:   [xilinx-label-all-loops]
 for (int i = 0; i < 128; i++) {
 ^~~
 VITIS_LOOP_13_1: 
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:9048:2: note: FIX-IT applied suggested code changes
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:9055:48: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=shift_i type=ram_2p impl=bram
                                               ^
/home/paket/Desktop/vitis/Read_the_docs/project_files/project1/fir128/fir128/solution1/.autopilot/db/fir.pp.0.cpp:9056:48: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=shift_q type=ram_2p impl=bram
                                               ^
